# nyan

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  i686-elf-linux.cmake  i686-elf-mac-with-sysroot.cmake  i686-elf-mac.cmake  i686-elf-win-with-sysroot.cmake  i686-elf-win.cmake  package.json  pnpm-lock.yaml  tsconfig.json
.codebuddy/: SUMMARY.md
cmake/: config.cmake  toolchain-kernel-linux.cmake  toolchain-user-mac.cmake
include/bits/: fcntl.h  mman.h
include/nyan/: errno.h  signal.h  syscall.h  time.h  types.h
include/sys/: ioctl.h  signal.h  types.h  wait.h
kernel/: CMakeLists.txt  boot.s  linker.ld  main.cpp
kernel/allocator/: alloc.cpp  alloc.hpp  allocator.hpp  forward.hpp  frame.cpp  frame.hpp  large_frame.cpp  large_frame.hpp  load.cpp  load.hpp  map.hpp  mod.cpp  mod.hpp  physicalFrame.hpp  physical_frame.cpp  physical_frame.hpp  pool.cpp  pool.hpp  slab.cpp  slab.hpp  stl.hpp  utils.cpp
kernel/arch/: debug.hpp  file.cpp  file.hpp  instr.hpp  io.hpp  port.hpp  print.cpp  print.hpp  sse.hpp
kernel/boot/: multiboot.hpp
kernel/console/: buffer.cpp  buffer.hpp  device.cpp  device.hpp  entry.cpp  entry.hpp  file.cpp  file.hpp  forward.hpp  load.cpp  load.hpp  mod.hpp  tty.cpp  tty.hpp
kernel/data/: embed.hpp  macro.hpp
kernel/elf/: entry.hpp  mod.cpp  mod.hpp
kernel/fs/: dentry.cpp  dentry.hpp  device.hpp  fd.cpp  fd.hpp  file.hpp  filesystem.hpp  forward.hpp  load.cpp  load.hpp  mod.cpp  mod.hpp  mount.hpp  path.cpp  path.hpp  pipe.cpp  pipe.hpp  super_block.hpp  vnode.cpp  vnode.hpp  vnode_file.cpp  vnode_file.hpp
kernel/fs/device/: device.hpp
kernel/fs/fs/: ramfs.cpp  ramfs.hpp
kernel/gdt/: entry.hpp  load.cpp  load.hpp  tss.hpp
kernel/include/nyan/: errno.h  syscall.h
kernel/interrupt/: dispatch.hpp  entry.hpp  forward.hpp  impl.cpp  isr.cpp  isr.hpp  load.cpp  load.hpp  syscall.s
kernel/keyboard/: forward.hpp  load.cpp  load.hpp  message.cpp  message.hpp  mod.cpp  mod.hpp
kernel/lib/: containers.hpp  format.hpp  function.hpp  lazy.hpp  list.hpp  queue.hpp  result.hpp  shared.hpp
kernel/lib/format/: concepts.hpp  context.hpp  emit.hpp  formatter.hpp  mesure.hpp  spec.hpp
kernel/lib/list/: container.hpp
kernel/logger/: print.cpp  print.hpp  types.hpp
kernel/paging/: address.hpp  directory.cpp  directory.hpp  entry.hpp  kernel.cpp  kernel.hpp  range.hpp  table.cpp  table.hpp  translator.hpp  vma.hpp
kernel/runtime/: clang.cpp  libc.cpp  libcxx.cpp
kernel/syscall/: brk.cpp  chdir.cpp  close.cpp  dup.cpp  dup2.cpp  execve.cpp  exit.cpp  exit_group.cpp  fcntl64.cpp  fork.cpp  fstat64.cpp  getcwd.cpp  getdents64.cpp  getpgid.cpp  getpgrp.cpp  getpid.cpp  getppid.cpp  gettid.cpp  getuid.cpp  ioctl.cpp  kill.cpp  link.cpp  llseek.cpp  lstat64.cpp  mmap2.cpp  mmap_pgoff.cpp  munmap.cpp  nanosleep.cpp  newuname.cpp  open.cpp  pipe.cpp  read.cpp  readlink.cpp  readv.cpp  rt_sigaction.cpp  rt_sigprocmask.cpp  set_thread_area.cpp  set_tid_address.cpp  setpgid.cpp  signal.cpp  (+12 more)
kernel/task/: fd.cpp  fd.hpp  forward.hpp  load.cpp  lock.cpp  lock.hpp  mod.cpp  mod.hpp  pid.cpp  pid.hpp  scheduler.hpp  scheduler.other.cpp  scheduler.self.cpp  scheduler.task.cpp  signal.hpp  stack.cpp  stack.hpp  switch.hpp  switch.s  task.cpp  task.hpp  tcb.cpp  tcb.hpp  trampoline.hpp  trampoline.s  wait.cpp  wait.hpp
kernel/task/tcb/: file.cpp  file.hpp  signal.cpp  signal.hpp
kernel/timer/: load.cpp  load.hpp
kernel/vga/: buffer.hpp  cursor.hpp  entry.hpp
logger/: addr.ts  errno.ts  parser.ts  signal.ts  syscall.ts  types.ts  watch.ts
logger/syscall/: flags.ts
plans/: input-pipeline-refactor.md
scripts/: build-clang.sh  build-compiler-rt.sh  build-libcxx-full.sh  build-libcxx.sh  build-musl-full.sh  build-musl.sh  filter_asm.ts  i686-elf  i686-elf.cmake  i686-unknown-linux.cmake  lldb_nyan.py  run.sh  sync.ts  sysdef.yml
src/: boot.s  linker.ld  main.cpp  test.hpp
src/allocator/: allocator.hpp  frame.cpp  frame.hpp  load.cpp  load.hpp  page.cpp  page.hpp  physicalFrame.hpp  pool.cpp  pool.hpp  slab.cpp  slab.hpp  utils.cpp  utils.hpp
src/arch/: guard.hpp  instr.hpp  io.hpp  utils.hpp
src/boot/: entry.hpp
src/console/: buffer.cpp  buffer.hpp  entry.cpp  entry.hpp
src/data/: embed.cpp  embed.hpp
src/elf/: entry.hpp
src/gdt/: entry.hpp  load.cpp  load.hpp  tss.hpp
src/include/bits/: signum.h
src/include/nyan/: ioctls.h  syscall.h  types.h
src/include/sys/: signal.h
src/interrupt/: entry.hpp  impl.cpp  isr.cpp  isr.hpp  load.cpp  load.hpp  syscall.s
src/keyboard/: buffer.hpp  load.cpp  load.hpp  message.hpp
src/lib/: algorithm.hpp  clang.cpp  concepts.hpp  containers.hpp  format.hpp  function.hpp  libc.cpp  libcxx.cpp  list.hpp  shared.hpp
src/lib/format/: concepts.hpp  emit.hpp  mesure.hpp  spec.hpp  utils.hpp
src/lib/list/: concepts.hpp  container.hpp  node.hpp
src/paging/: address.hpp  convert.hpp  directory.cpp  directory.hpp  entry.hpp  kernel.cpp  kernel.hpp  table.hpp  translator.hpp
src/setup/: paging.cpp  paging.hpp  sse.hpp
src/syscall/: brk.cpp  close.cpp  dup.cpp  dup2.cpp  entry.hpp  exit.cpp  getpid.cpp  ioctl.cpp  kill.cpp  nanosleep.cpp  read.cpp  sigreturn.cpp  spawn.cpp  waitpid.cpp  write.cpp
src/task/: fd.cpp  forward.hpp  guard.hpp  pid.cpp  pid.hpp  switch.hpp  switch.s  task.cpp  task.hpp  tcb.cpp  tcb.hpp  trampoline.h  trampoline.s  wait.cpp  wait.hpp
src/timer/: load.cpp  load.hpp
src/tty/: buffer.cpp  buffer.hpp  entry.cpp  entry.hpp
src/user/entry/: argv.cpp  (+8 more)
src/vga/: buffer.hpp  cursor.hpp  entry.hpp  print.cpp  print.hpp
user/: CMakeLists.txt
user/entry/: CMakeLists.txt  busybox  busybox_unstripped  cat.cpp  echo.cpp  kill.cpp  ls.cpp  pwd.cpp  segv.cpp  sh.cpp  sleep.cpp  test.cpp  utils.hpp
user/entry/sh/: main.cpp  parser.cpp  parser.hpp
user/include/: stdio.h  stdlib.h  string.h  unistd.h
user/lib/: CMakeLists.txt
user/lib/include/: stdio_impl.h  stdlib_impl.h  utils.hpp
user/lib/src/: ctype.cpp  errno.cpp  ioctl.cpp  libc.cpp  signal.cpp  stdio.cpp  stdlib.cpp  string.cpp  syscall.cpp  unistd.cpp  utils.hpp
(+35 files in other folders)
